nodemon intergration with docker

--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -1,4 +1,17 @@
-FROM node:latest
+FROM node:latest as debug
+
+WORKDIR /app
+
+COPY . /app
+
+RUN npm i
+
+EXPOSE 3000
+
+ENTRYPOINT ["npm"]
+CMD ["run", "dev"]
+
+FROM node:latest as prod
 
 WORKDIR /app
 
