--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
     container_name: user
     build: 
       context: ./user
+      target: debug
+    volumes: 
+      - ./user:/app
     ports: 
       - 3000:3000
     restart: on-failure
@@ -28,6 +31,9 @@ services:
     container_name: authentication
     build: 
       context: ./authentication
+      target: debug
     ports: 
       - 3001:3000
-    restart: on-failure
+    volumes: 
+      - ./authentication:/app
+    restart: always
