--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,12 +13,12 @@ http {
     listen 80;
     server_name localhost 127.0.0.1;
 
-    location /auth {
+    location /api/auth {
       proxy_pass           http://authentication:3000;
       proxy_set_header     X-Forwrded-For $remote_addr;
     }
 
-    location /user {
+    location /api/user {
       proxy_pass           http://user:3000;
       proxy_set_header     X-Forwrded-For $remote_addr;
     }
