--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     container_name: reverse_proxy
     depends_on: 
       - authentication
+      - user
     volumes: 
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     ports: 
