--- a/microservice2/package.json
+++ b/microservice2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "authentication",
+  "name": "microservice2",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,23 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
-    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/microservices": "^7.6.15",
-    "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/swagger": "^4.8.0",
-    "@types/bcrypt": "^3.0.0",
-    "bcrypt": "^5.0.1",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "dotenv": "^8.2.0",
-    "mongoose": "^5.12.3",
-    "nest-router": "^1.0.9",
+    "amqp-connection-manager": "^3.2.2",
+    "amqplib": "^0.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
-    "swagger-ui-express": "^4.1.6"
+    "rxjs": "^6.6.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
