--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,16 @@ http {
       proxy_set_header     X-Forwrded-For $remote_addr;
     }
 
+    location /microservice1 {
+      proxy_pass           http://microservice1:3000;
+      proxy_set_header     X-Forwrded-For $remote_addr;
+    }
+
+    location /microservice2 {
+      proxy_pass           http://microservice2:3000;
+      proxy_set_header     X-Forwrded-For $remote_addr;
+    }
+
     # location / {
     #   proxy_pass           http://authentication:3000;
     #   proxy_set_header     X-Forwrded-For $remote_addr;
